--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -84,9 +84,10 @@ a:hover {
 }
 
 .card-portrait {
-  display:table-cell;
-  vertical-align: middle;
-  text-align:center;
+  // display:table-cell;
+  // vertical-align: middle;
+  // text-align:center;
+  margin-bottom:15px;
 }
 
 .card-header-info {
@@ -180,7 +181,7 @@ a:hover {
   position: fixed;
   left:0;
   top:0;
-  padding:10px 10px 10px 10px;
+  padding:10px 20px 5px 20px;
   color: $brand-primary;
   z-index: 1000;
 
@@ -260,5 +261,33 @@ a:hover {
 @media (min-width: 1200px) {
   .container {
     width: 1300px;
+  }
+}
+@media (min-width: $screen-sm-min) {
+  .col-md-6 {
+    width:48%;
+    + .col-md-6 {
+      margin-left:1%;
+    }
+  }
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: $screen-md-min) {
+  .col-md-6 {
+    width:48%;
+    + .col-md-6 {
+      margin-left:1%;
+    }
+  }
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: $screen-lg-min) {
+  .col-md-6 {
+    width:48%;
+    + .col-md-6 {
+      margin-left:1%;
+    }
   }
 }
