--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -112,17 +112,6 @@ a:hover {
     padding-right:10px;
   }
 }
-.fake-portrait {
-  background:$brand-primary;
-  border-radius:50%;
-  border:4px solid white;
-  display:table-cell;
-  height:120px;
-  min-width:120px; 
-  vertical-align: middle;
-  text-align: center;
-
-}
 .card-landing-page {
 }
 .custom-well {
@@ -134,6 +123,9 @@ a:hover {
   .panel-heading, .panel-footer {
     background-color: white;
     border-top:0px;
+  }
+  p {
+    margin-top:10px;
   }
 }
 .section-header {
@@ -171,9 +163,7 @@ a:hover {
 .btn {
   border:0px solid transparent;
 }
-.home-wrapper {
-  margin-top:0px;
-}
+
 .menu-frame {
   position: fixed;
 }
@@ -181,10 +171,8 @@ a:hover {
   position: fixed;
   left:0;
   top:0;
-  padding:10px 20px 5px 20px;
+  padding:5px 5px 5px 5px;
   color: $brand-primary;
-  z-index: 1000;
-
 }
 .nav-btn:hover {
   color: $link-hover-color;
@@ -251,6 +239,14 @@ a:hover {
     vertical-align: middle;
     z-index:10005;
   }
+}
+.welcome-banner {
+  display:table;
+}
+
+.welcome-banner-inner {
+  display: table-cell;
+  vertical-align: middle;
 }
 
 [type="checkbox"] {
