--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,27 +1,38 @@
 = provide :title, "Welcome"
-.row
-  .col-md-8.col-md-offset-2
-    .home-wrapper
-      .row
-        .col-md-12
-          .card-landing-page
-            .card-header
-              .card-portrait
-                .fake-portrait
-                  = fa_icon "user 5x"
-              .card-header-info
-                %h1 Welcome to GitCard
-                .lead 
-                  Show off your
-                  %strong best work on Github.
-                  Sign in below to create a customizable Github profile.
-      .row
-        .col-md-12
-          .well.custom-well
-            = button_to create_account_path, {class: "btn btn-success btn-lg"} do
-              = fa_icon "github"
-              Sign in with Github
 
-            / %button.btn.btn-success.btn-lg 
-            /   = fa_icon "github"
-            /   Sign in with Github
+.row
+  .co-md-12
+    .card-header
+      .card-header-info
+        %h1 Welcome to GitCard
+        .lead 
+          Show off your
+          %strong best work on Github.
+          Sign in below to create a customizable Github profile.
+.row
+  .well.custom-well
+    = button_to create_account_path, {class: "btn btn-success btn-lg"} do
+      = fa_icon "github"
+      Sign in with Github
+.row
+  .col-lg-4.col-md-4
+    .card-header.card-header-lg
+      Step 1
+    .well.custom-well
+      = image_tag "step1-onboarding.png", class: "img-responsive img-thumbnail"
+      %p First, sign in with your Github and import information about your repositories.
+  .col-lg-4.col-md-4
+    .card-header.card-header-lg
+      Step 2
+    .well.custom-well
+      = image_tag "step2-onboarding.png", class: "img-responsive img-thumbnail"
+      %p Fill in a short description about yourself and any social links your want to show on your page.
+  .col-lg-4.col-md-4
+    .card-header.card-header-lg
+      Step 3
+    .well.custom-well
+      = image_tag "step3-onboarding.png", class: "img-responsive img-thumbnail"
+      %p Lastly, choose which repos you want to feature on your profile page.
+.made-by
+  %a{ href: "http://www.github.com/johnkeith"} Made by @johnkeith
+
